--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,5 +85,5 @@ dependencies {
     //dialog
     implementation 'com.crowdfire.cfalertdialog:cfalertdialog:1.1.0'
 
-    compile 'com.snatik:storage:2.1.0'
+    implementation 'com.snatik:storage:2.1.0'
 }
